--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>五大领域</h2>
-                <p>每天从中抽取，按你定制</p>
+                <p>全部为你量身定制</p>
             </div>
             <div class="domains-grid">
                 <div class="domain-card">
