--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
         .logo-text {
             font-size: 1.75rem;
-            font-weight: 700;
+            font-family: "Arial Black", Arial, sans-serif;
+            font-weight: 900;
             letter-spacing: -0.5px;
         }
 
@@ -1120,7 +1121,6 @@
             <ul class="nav-links">
                 <li><a href="#mechanism">机制</a></li>
                 <li><a href="#chatbot">思考助手</a></li>
-                <li><a href="#pricing">定价</a></li>
                 <li><a href="#cta">开始</a></li>
             </ul>
         </div>
@@ -1249,7 +1249,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>五大领域</h2>
-                <p>全部为你量身定制</p>
+                <p>每天从中抽取，按你定制</p>
             </div>
             <div class="domains-grid">
                 <div class="domain-card">
@@ -1340,61 +1340,6 @@
                             <span class="arrow">↗</span>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Pricing -->
-    <section class="pricing" id="pricing">
-        <div class="container">
-            <div class="section-header">
-                <h2>💡 购买生成次数</h2>
-                <p>每次生成 5 个专属问题</p>
-            </div>
-            <div class="pricing-grid">
-                <div class="pricing-card">
-                    <div class="times">1<span>次</span></div>
-                    <p class="unit-price">¥1.00/次</p>
-                    <div class="price">¥<span>1</span></div>
-                </div>
-                <div class="pricing-card popular">
-                    <div class="badge">🔥 最受欢迎</div>
-                    <div class="times">10<span>次</span></div>
-                    <p class="unit-price">¥0.60/次</p>
-                    <div class="price">¥<span>6</span></div>
-                    <div class="discount">省 40%</div>
-                </div>
-                <div class="pricing-card">
-                    <div class="times">30<span>次</span></div>
-                    <p class="unit-price">¥0.60/次</p>
-                    <div class="price">¥<span>18</span></div>
-                    <div class="discount">省 40%</div>
-                </div>
-                <div class="pricing-card">
-                    <div class="times">50<span>次</span></div>
-                    <p class="unit-price">¥0.56/次</p>
-                    <div class="price">¥<span>28</span></div>
-                    <div class="discount">省 44%</div>
-                </div>
-            </div>
-
-            <!-- Subscription -->
-            <div class="subscription-card">
-                <div class="subscription-info">
-                    <h3>思考助手订阅</h3>
-                    <p class="tagline">解锁无限对话，深入探索每一个问题</p>
-                    <ul class="subscription-features">
-                        <li>无限对话次数</li>
-                        <li>问题卡片一键转发</li>
-                        <li>记住你的背景上下文</li>
-                        <li>流畅打字机效果</li>
-                    </ul>
-                </div>
-                <div class="subscription-price">
-                    <div class="amount">¥12<span>/月</span></div>
-                    <p class="period">按月订阅，随时取消</p>
-                    <a href="#" class="btn btn-blue">立即订阅</a>
                 </div>
             </div>
         </div>
@@ -1511,7 +1456,6 @@
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
                         创建个人档案
                     </a>
-                    <a href="#pricing" class="btn btn-secondary">获取今日五问 →</a>
                 </div>
             </div>
         </div>
@@ -1533,7 +1477,6 @@
                     <ul>
                         <li><a href="#mechanism">个性化机制</a></li>
                         <li><a href="#chatbot">思考助手</a></li>
-                        <li><a href="#pricing">定价</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
