--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
                     <div class="qcard-subtitle">从陌生人到内圈的最快路径</div>
                     <div class="qcard-body">
                         <p>研究显示，shared vulnerability比shared success更快建立深度信任。但在中国商业语境下，"示弱"可能被理解为"无能"。</p>
-                        <p><strong>问题：</strong> 设计一个"信任加速protocol"：如何在与关二代的第一次见面就建立deep trust？考虑中韩美三种文化context，什么样的"vulnerability"是strategic的？给出具体的conversation flow：前10分钟说什么，怎么从small talk过渡到real talk？</p>
+                        <p><strong>问题：</strong> 设计一个“信任加速 protocol”：如何在与传统企业的关键决策者/项目赞助人第一次见面就建立 deep trust？考虑中韩美三种文化 context，什么样的 vulnerability 是 strategic 的，同时不会被误读为“不专业”？给出具体的 conversation flow：前 10 分钟说什么，怎么从 small talk 过渡到 real talk？</p>
                     </div>
                     <span class="qcard-tag social">SOCIAL</span>
                 </div>
