--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                 </div>
                 <div class="domain-card">
                     <div class="icon">📚</div>
-                    <h4>人文博雅</h4>
+                    <h4>泛人文</h4>
                     <span class="tag arts">Liberal Arts</span>
                 </div>
                 <div class="domain-card">
@@ -997,7 +997,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>问题示例</h2>
-                <p>问题卡片风格参照 App 内</p>
+                <p>由于问题的内容/风格/长度高度定制化，此处仅供参考</p>
             </div>
 
             <div class="qcards">
