--- a/index.html
+++ b/index.html
@@ -827,7 +827,13 @@
     <nav>
         <div class="nav-container">
             <a href="#" class="logo">
-                <div class="logo-icon">🧠</div>
+                <div class="logo-icon" aria-label="Querya Logo">
+  <svg viewBox="0 0 48 48" width="28" height="28" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    <path d="M24 38V14" stroke="#000" stroke-width="8" stroke-linecap="round"/>
+    <path d="M10 24L24 10L38 24" stroke="#000" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+</div>
+
                 <span class="logo-text">Querya</span>
             </a>
             <ul class="nav-links">
@@ -1161,7 +1167,13 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="#" class="logo">
-                        <div class="logo-icon">🧠</div>
+                        <div class="logo-icon" aria-label="Querya Logo">
+  <svg viewBox="0 0 48 48" width="28" height="28" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    <path d="M24 38V14" stroke="#000" stroke-width="8" stroke-linecap="round"/>
+    <path d="M10 24L24 10L38 24" stroke="#000" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+</div>
+
                         <span class="logo-text">Querya</span>
                     </a>
                     <p>个人化的每日提问引擎。你提供上下文，我们生成训练。</p>
