--- a/index.html
+++ b/index.html
@@ -827,12 +827,24 @@
     <nav>
         <div class="nav-container">
             <a href="#" class="logo">
-                <div class="logo-icon" aria-label="Querya Logo">
-  <svg viewBox="0 0 48 48" width="28" height="28" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <path d="M24 38V14" stroke="#000" stroke-width="8" stroke-linecap="round"/>
-    <path d="M10 24L24 10L38 24" stroke="#000" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
+               <div class="logo-icon" aria-label="Querya Logo">
+  <svg viewBox="0 0 48 48" width="30" height="30" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    <!-- Arrow head -->
+    <path d="M12 24 L24 12 L36 24"
+          fill="none"
+          stroke="#000"
+          stroke-width="12"
+          stroke-linecap="round"
+          stroke-linejoin="round"/>
+    <!-- Shaft -->
+    <path d="M24 36 V18"
+          fill="none"
+          stroke="#000"
+          stroke-width="12"
+          stroke-linecap="round"/>
   </svg>
 </div>
+
 
                 <span class="logo-text">Querya</span>
             </a>
@@ -1168,11 +1180,23 @@
                 <div class="footer-brand">
                     <a href="#" class="logo">
                         <div class="logo-icon" aria-label="Querya Logo">
-  <svg viewBox="0 0 48 48" width="28" height="28" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <path d="M24 38V14" stroke="#000" stroke-width="8" stroke-linecap="round"/>
-    <path d="M10 24L24 10L38 24" stroke="#000" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
+  <svg viewBox="0 0 48 48" width="30" height="30" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    <!-- Arrow head -->
+    <path d="M12 24 L24 12 L36 24"
+          fill="none"
+          stroke="#000"
+          stroke-width="12"
+          stroke-linecap="round"
+          stroke-linejoin="round"/>
+    <!-- Shaft -->
+    <path d="M24 36 V18"
+          fill="none"
+          stroke="#000"
+          stroke-width="12"
+          stroke-linecap="round"/>
   </svg>
 </div>
+
 
                         <span class="logo-text">Querya</span>
                     </a>
