--- a/index.html
+++ b/index.html
@@ -829,19 +829,16 @@
             <a href="#" class="logo">
                <div class="logo-icon" aria-label="Querya Logo">
   <svg viewBox="0 0 48 48" width="30" height="30" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <!-- Arrow head -->
-    <path d="M12 24 L24 12 L36 24"
-          fill="none"
-          stroke="#000"
-          stroke-width="12"
-          stroke-linecap="round"
-          stroke-linejoin="round"/>
-    <!-- Shaft -->
-    <path d="M24 36 V18"
-          fill="none"
-          stroke="#000"
-          stroke-width="12"
-          stroke-linecap="round"/>
+    <g fill="#000">
+      <!-- stem -->
+      <rect x="20" y="20" width="8" height="20" rx="4"></rect>
+
+      <!-- left arm -->
+      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(-45 24 19)"></rect>
+
+      <!-- right arm -->
+      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(45 24 19)"></rect>
+    </g>
   </svg>
 </div>
 
@@ -1181,19 +1178,16 @@
                     <a href="#" class="logo">
                         <div class="logo-icon" aria-label="Querya Logo">
   <svg viewBox="0 0 48 48" width="30" height="30" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <!-- Arrow head -->
-    <path d="M12 24 L24 12 L36 24"
-          fill="none"
-          stroke="#000"
-          stroke-width="12"
-          stroke-linecap="round"
-          stroke-linejoin="round"/>
-    <!-- Shaft -->
-    <path d="M24 36 V18"
-          fill="none"
-          stroke="#000"
-          stroke-width="12"
-          stroke-linecap="round"/>
+    <g fill="#000">
+      <!-- stem -->
+      <rect x="20" y="20" width="8" height="20" rx="4"></rect>
+
+      <!-- left arm -->
+      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(-45 24 19)"></rect>
+
+      <!-- right arm -->
+      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(45 24 19)"></rect>
+    </g>
   </svg>
 </div>
 
