--- a/index.html
+++ b/index.html
@@ -829,16 +829,7 @@
             <a href="#" class="logo">
                <div class="logo-icon" aria-label="Querya Logo">
   <svg viewBox="0 0 48 48" width="30" height="30" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <g fill="#000">
-      <!-- stem -->
-      <rect x="20" y="20" width="8" height="20" rx="4"></rect>
-
-      <!-- left arm -->
-      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(-45 24 19)"></rect>
-
-      <!-- right arm -->
-      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(45 24 19)"></rect>
-    </g>
+    <path fill="#000" d="M 24.48 44.00 L 23.52 44.00 L 23.44 43.92 L 23.12 43.92 L 22.65 43.76 L 21.77 43.28 L 21.45 43.04 L 20.85 42.37 L 20.37 41.65 L 20.13 41.10 L 20.13 40.78 L 20.05 40.70 L 20.05 21.72 L 20.13 21.64 L 20.13 21.32 L 20.29 20.76 L 20.53 20.21 L 20.93 19.58 L 21.25 19.18 L 21.69 18.78 L 22.32 18.38 L 22.88 18.14 L 23.44 17.98 L 23.76 17.98 L 23.84 17.90 L 24.16 17.90 L 24.24 17.98 L 24.56 17.98 L 25.12 18.14 L 25.68 18.38 L 26.31 18.78 L 26.71 19.10 L 27.03 19.42 L 27.43 20.05 L 27.67 20.60 L 27.83 21.16 L 27.83 21.48 L 27.91 21.56 L 27.91 40.70 L 27.83 40.78 L 27.83 41.10 L 27.67 41.65 L 27.43 42.21 L 27.03 42.84 L 26.71 43.24 L 26.31 43.64 L 25.68 44.04 L 25.12 44.28 L 24.56 44.44 L 24.24 44.44 Z M 9.79 25.46 L 9.71 25.46 L 9.16 25.30 L 8.60 25.06 L 7.97 24.66 L 7.57 24.34 L 7.17 23.94 L 6.77 23.31 L 6.53 22.75 L 6.37 22.20 L 6.37 21.88 L 6.29 21.80 L 6.29 21.48 L 6.37 21.40 L 6.37 21.08 L 6.53 20.52 L 6.77 19.97 L 7.17 19.34 L 7.57 18.94 L 7.97 18.62 L 8.60 18.22 L 9.16 17.98 L 9.71 17.82 L 10.03 17.82 L 10.11 17.74 L 14.01 17.74 L 14.09 17.66 L 23.04 8.70 L 23.12 8.70 L 23.52 8.30 L 24.08 7.91 L 24.64 7.65 L 25.19 7.48 L 25.51 7.48 L 25.59 7.41 L 26.23 7.41 L 26.31 7.48 L 26.63 7.48 L 27.18 7.65 L 27.74 7.91 L 28.29 8.30 L 28.69 8.70 L 39.40 19.42 L 39.80 19.82 L 40.20 20.37 L 40.44 20.93 L 40.60 21.48 L 40.60 21.80 L 40.68 21.88 L 40.68 22.20 L 40.60 22.28 L 40.60 22.60 L 40.44 23.16 L 40.20 23.71 L 39.80 24.34 L 39.40 24.74 L 38.85 25.14 L 38.29 25.38 L 37.74 25.54 L 37.42 25.54 L 37.34 25.62 L 37.02 25.62 L 36.94 25.54 L 36.62 25.54 L 36.06 25.38 L 35.51 25.14 L 34.88 24.74 L 34.48 24.34 L 34.16 24.02 L 24.96 14.82 L 24.88 14.82 L 24.64 14.58 L 24.40 14.82 L 24.32 14.82 L 15.12 24.02 L 14.80 24.34 L 14.40 24.74 L 13.77 25.14 L 13.21 25.38 L 12.66 25.54 L 12.34 25.54 L 12.26 25.62 L 11.94 25.62 L 11.86 25.54 L 11.54 25.54 L 10.98 25.38 L 10.43 25.14 L 9.79 24.74 Z"/>
   </svg>
 </div>
 
@@ -1176,20 +1167,12 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="#" class="logo">
-                        <div class="logo-icon" aria-label="Querya Logo">
+                       <div class="logo-icon" aria-label="Querya Logo">
   <svg viewBox="0 0 48 48" width="30" height="30" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <g fill="#000">
-      <!-- stem -->
-      <rect x="20" y="20" width="8" height="20" rx="4"></rect>
-
-      <!-- left arm -->
-      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(-45 24 19)"></rect>
-
-      <!-- right arm -->
-      <rect x="20" y="7" width="8" height="22" rx="4" transform="rotate(45 24 19)"></rect>
-    </g>
+    <path fill="#000" d="M 24.48 44.00 L 23.52 44.00 L 23.44 43.92 L 23.12 43.92 L 22.65 43.76 L 21.77 43.28 L 21.45 43.04 L 20.85 42.37 L 20.37 41.65 L 20.13 41.10 L 20.13 40.78 L 20.05 40.70 L 20.05 21.72 L 20.13 21.64 L 20.13 21.32 L 20.29 20.76 L 20.53 20.21 L 20.93 19.58 L 21.25 19.18 L 21.69 18.78 L 22.32 18.38 L 22.88 18.14 L 23.44 17.98 L 23.76 17.98 L 23.84 17.90 L 24.16 17.90 L 24.24 17.98 L 24.56 17.98 L 25.12 18.14 L 25.68 18.38 L 26.31 18.78 L 26.71 19.10 L 27.03 19.42 L 27.43 20.05 L 27.67 20.60 L 27.83 21.16 L 27.83 21.48 L 27.91 21.56 L 27.91 40.70 L 27.83 40.78 L 27.83 41.10 L 27.67 41.65 L 27.43 42.21 L 27.03 42.84 L 26.71 43.24 L 26.31 43.64 L 25.68 44.04 L 25.12 44.28 L 24.56 44.44 L 24.24 44.44 Z M 9.79 25.46 L 9.71 25.46 L 9.16 25.30 L 8.60 25.06 L 7.97 24.66 L 7.57 24.34 L 7.17 23.94 L 6.77 23.31 L 6.53 22.75 L 6.37 22.20 L 6.37 21.88 L 6.29 21.80 L 6.29 21.48 L 6.37 21.40 L 6.37 21.08 L 6.53 20.52 L 6.77 19.97 L 7.17 19.34 L 7.57 18.94 L 7.97 18.62 L 8.60 18.22 L 9.16 17.98 L 9.71 17.82 L 10.03 17.82 L 10.11 17.74 L 14.01 17.74 L 14.09 17.66 L 23.04 8.70 L 23.12 8.70 L 23.52 8.30 L 24.08 7.91 L 24.64 7.65 L 25.19 7.48 L 25.51 7.48 L 25.59 7.41 L 26.23 7.41 L 26.31 7.48 L 26.63 7.48 L 27.18 7.65 L 27.74 7.91 L 28.29 8.30 L 28.69 8.70 L 39.40 19.42 L 39.80 19.82 L 40.20 20.37 L 40.44 20.93 L 40.60 21.48 L 40.60 21.80 L 40.68 21.88 L 40.68 22.20 L 40.60 22.28 L 40.60 22.60 L 40.44 23.16 L 40.20 23.71 L 39.80 24.34 L 39.40 24.74 L 38.85 25.14 L 38.29 25.38 L 37.74 25.54 L 37.42 25.54 L 37.34 25.62 L 37.02 25.62 L 36.94 25.54 L 36.62 25.54 L 36.06 25.38 L 35.51 25.14 L 34.88 24.74 L 34.48 24.34 L 34.16 24.02 L 24.96 14.82 L 24.88 14.82 L 24.64 14.58 L 24.40 14.82 L 24.32 14.82 L 15.12 24.02 L 14.80 24.34 L 14.40 24.74 L 13.77 25.14 L 13.21 25.38 L 12.66 25.54 L 12.34 25.54 L 12.26 25.62 L 11.94 25.62 L 11.86 25.54 L 11.54 25.54 L 10.98 25.38 L 10.43 25.14 L 9.79 24.74 Z"/>
   </svg>
 </div>
+
 
 
                         <span class="logo-text">Querya</span>
