--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
             padding: 0;
             box-sizing: border-box;
         }
-        .logo-mask{
+       .logo-img{
   width: 28px;
   height: 28px;
   display: block;
-  background: #000;
-  -webkit-mask: url("assets/querya-arrow.png") center / contain no-repeat;
-  mask: url("assets/querya-arrow.png") center / contain no-repeat;
+  object-fit: contain;
 }
 
         html {
