--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
             padding: 0;
             box-sizing: border-box;
         }
-       .logo-img{
+       .logo-mask{
   width: 28px;
   height: 28px;
   display: block;
-  object-fit: contain;
+  background: #000;
+ -webkit-mask: url("./querya_arrow_256.png") center / contain no-repeat;
+mask: url("./querya_arrow_256.png") center / contain no-repeat;
 }
+
 
         html {
             scroll-behavior: smooth;
